--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                            <article>
                                     <img src="imagen7.png" usemap="#image-map">
                                      <map name="image-map">
-                                              <area target="_blank" alt="seccion 1" title="seccion 1" href="file:///E:/TAREAS/COM-99/avance%20html/section.html" coords="2,-1,212,293" shape="rect">
-                                              <area target="_blank" alt="seccion 2" title="seccion 2" href="file:///E:/TAREAS/COM-99/avance%20html/section2.html" coords="223,0,437,293" shape="rect">
-                                              <area target="_blank" alt="seccion 3" title="seccion 3" href="file:///E:/TAREAS/COM-99/avance%20html/section3.html" coords="449,2,660,294" shape="rect">
+                                              <area target="_blank" alt="seccion 1" title="seccion 1" href="section.html" coords="2,-1,212,293" shape="rect">
+                                              <area target="_blank" alt="seccion 2" title="seccion 2" href="section2.html" coords="223,0,437,293" shape="rect">
+                                              <area target="_blank" alt="seccion 3" title="seccion 3" href="section3.html" coords="449,2,660,294" shape="rect">
                                      </map>
                            </article>
                        </section>
